# Trier_Fantasy_Football

./: .eslintignore  .gitignore  CONTRIBUTING.md  Chicago Bears Roster.xlsx  Code Audit.md  IMAGE_SOURCING_REPORT.md  LICENSE  README.md  README_INGESTION.md  README_SYNC.md  ROADMAP.md  SECURITY_TASKS.md  TASKS.md  Trier Fantasy Football Code Stats.md  audit_result.json  build_log.txt  consult_args.json  index.html  package-lock.json  package.json  playwright.config.ts  tauri_output.txt  video_health_report.md  vite.config.ts  vite_debug.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  gameday-lock-reminder.yml  player-pool-refresh.yml  release.yml  season-rollover.yml  stats-refresh.yml
docs/networking/: adr-001-p2p-sync.md  audit.md  plan.md
relay-server/: Dockerfile  package.json  server.js
scripts/: VIDEO_SOURCES.ts  audit_bears_socials.js  audit_top20_receivers.js  check_mcp_health.js  compress_images.py  console_gate_check.js  diagnose_video_health.js  env_audit.ps1  fetch_official_stats.js  find_missing_top_socials.js  generate_build_info.js  get_homer_id.js  harvest_ids.js  harvest_ids.ts  initialize_ledger_data.js  inspect_josh.js  localize_assets.py  migrate_to_current.js  refresh_player_pool.js  rollover_season.js  scrape_data.js  test_blacklist_logic.js  test_video_pipeline.ts  verify_combine.ts  verify_playback.js
scripts/archive/: alignment_plan.ps1  (+32 more)
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  compile_errors.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  main.rs
(+160 files in other folders)
