[package]
name = "trier-fantasy"
version = "3.3.0"
description = "Trier Fantasy Football Desktop App"
authors = ["Doug Trier"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "process-relaunch", "process-exit", "shell-open", "system-tray", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mdns-sd = "0.5" # Local Discovery
warp = "0.3" # Local Signaling Server
tokio = { version = "1", features = ["full"] } # Async runtime
anyhow = "1.0"
base64 = "0.22.1"
local-ip-address = "0.6.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
